# TMS_Emulation

./: CMakeLists.txt  LICENSE  Makefile
config/: tms.conf
docs/: ANALYSIS_v3.3.0.md  API_REFERENCE.md  BACKGROUND.md  BUILD_GUIDE.md  CHANGELOG.md  README.md  VERSION_HISTORY.txt
examples/: basic_usage.cpp
include/: configuration.h  error_codes.h  logger.h  tms_backup.h  tms_events.h  tms_groups.h  tms_history.h  tms_integrity.h  tms_json.h  tms_query.h  tms_reports.h  tms_retention.h  tms_system.h  tms_tape_mgmt.h  tms_types.h  tms_utils.h  tms_version.h
src/: configuration.cpp  logger.cpp  tms_main.cpp  tms_tape_mgmt.cpp
tests/: test_tms.cpp
